--- a/DemoASPMVC/Views/Home/TestJeu.cshtml
+++ b/DemoASPMVC/Views/Home/TestJeu.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DemoASPMVC.Models.Game>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "TestJeu";
 }
 
-<h1>Index</h1>
+<h1>TestJeu</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -38,8 +38,8 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
