--- a/DemoASPMVC/Views/Shared/_Layout.cshtml
+++ b/DemoASPMVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="Index">Liste jeux</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Connexion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">S'enregistrer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Déconnexion</a>
+                        </li>
                     </ul>
                 </div>
             </div>
