--- a/DemoASPMVC/Views/Game/Index.cshtml
+++ b/DemoASPMVC/Views/Game/Index.cshtml
@@ -9,11 +9,11 @@
 @if (session.ConnectedUser is not null)
 {
     <p>Bonjour @session.ConnectedUser.Nickname</p>
-    
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 }
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -44,7 +44,11 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
+                    @if(session.ConnectedUser is not null)
+                    {
+                        @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
+                        
+                    }
             </td>
         </tr>
 }
