--- a/DemoASPMVC/Views/Game/Index.cshtml
+++ b/DemoASPMVC/Views/Game/Index.cshtml
@@ -44,7 +44,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
-                    @if(session.ConnectedUser is not null)
+                    @if(session.ConnectedUser is not null && session.ConnectedUser.RoleName == "Admin")
                     {
                         @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
                         
