--- a/DemoASPMVC/Views/Game/Create.cshtml
+++ b/DemoASPMVC/Views/Game/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model DemoASPMVC.Models.Game
+﻿@using DemoASPMVC_DAL.Models;
+@model DemoASPMVC.Models.ViewModel.GameForm
 
 @{
     ViewData["Title"] = "Create";
@@ -23,9 +24,13 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
-                <span asp-validation-for="Genre" class="text-danger"></span>
+                <select asp-for="IdGenre" class="control-select">
+                @foreach(Genre g in Model.GenreList)
+                {
+                    <option value="@g.Id">@g.Label</option>
+                }
+                </select>
+                <span asp-validation-for="IdGenre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
