--- a/DemoASPMVC/Views/Game/Index.cshtml
+++ b/DemoASPMVC/Views/Game/Index.cshtml
@@ -9,10 +9,17 @@
 @if (session.ConnectedUser is not null)
 {
     <p>Bonjour @session.ConnectedUser.Nickname</p>
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+    @if (session.ConnectedUser.RoleName == "Admin")
+    {
+        <p>
+            <a asp-action="Create">Create New</a>
+        </p>
+    }
 }
+
+
+<p class="text-danger">@TempData["error"]</p>
+
 
 <table class="table">
     <thead>
@@ -23,9 +30,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genre)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -38,12 +43,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+           
             <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
+                
+                    @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
+                    @if (session.ConnectedUser is not null)
+                    {
+                        @Html.ActionLink("Favoris", "AddFavorite", new { id=item.Id  })
+                    
+                    }
                     @if(session.ConnectedUser is not null && session.ConnectedUser.RoleName == "Admin")
                     {
                         @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
