--- a/DemoASPMVC/Views/Game/ViewFavorite.cshtml
+++ b/DemoASPMVC/Views/Game/ViewFavorite.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DemoASPMVC.Models.Game>
 
 @{
-    ViewData["Title"] = "TestJeu";
+    ViewData["Title"] = "ViewFavorite";
 }
 
-<h1>TestJeu</h1>
+<h1>ViewFavorite</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -18,9 +18,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genre)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -33,13 +31,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
+           
             <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                
+                @Html.ActionLink("Details", "Details", new { id=item.Id  }) |
+               
             </td>
         </tr>
 }
